test/static/wrong/shadow3.kk.out
test/static/wrong/shadow3.kk(2,10): error: x is already defined at (2, 8)
 hint: if these are potentially recursive definitions, give a full type signature to disambiguate them.