test/static/wrong/shadow3.kk
// shadow parameter
fun id(x,x) = x
